// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContent component test should render without crash with props 1`] = `
<header
  className="card-content cardContent CLass"
/>
`;

exports[`CardContent component test should render without crash without props 1`] = `
<header
  className="card-content "
/>
`;
